--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+    "openai": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
