--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
-    "jspdf": "^2.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-    "openai": "^4.0.0"
+  "framer-motion": "^10.16.4",
+  "jspdf": "^2.5.1",
+  "openai": "^4.0.0",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"
+}
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
